bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:2: error: '(' expected but identifier found.
def diff21(n:Int): Int = {if n > 21 {return (2*(n-21))}
                             ^Diff21:4: error: illegal start of simple expression
} 
^